--- a/templates/base.html
+++ b/templates/base.html
@@ -122,7 +122,7 @@
                                     <a href="{% url 'team_profile_teams_mine' %}"><i class="fa fa-users"></i>{% trans 'تیم‌ها' %}</a>
                                 </li>
                                 <!-- TEAM END -->
-                                
+
                                 <!-- CFD BEGIN -->
                                 <li>
                                     <a><i class="fa fa-dollar"></i>{% trans 'CFD' %}<span
@@ -154,6 +154,28 @@
                             </ul>
                         </div>
 
+                        <div class="menu_section">
+                            <h3>{% trans 'تیم‌های شما' %}</h3>
+                            {% if request.user.teams.all %}
+                            <ul class="nav side-menu">
+
+                                {% for team in request.user.teams.all %}
+                                <li>
+                                    <a><i class="fa fa-users"></i>{{team.name}}<span
+                                            class="fa fa-chevron-down"></span></a>
+                                    <ul class="nav child_menu">
+                                        <li><a href="{% url 'team_profile_teams_view' team.id %}">{% trans 'مشاهده' %}</a></li>
+                                        <li><a href="{% url 'team_profile_attendance_view_today' team.id %}">{% trans 'حضور و غیاب' %}</a></li>
+                                        <li><a href="{% url 'dmo_profile_dmo_view_this_month' team.id %}">{% trans 'DMO' %}</a></li>
+                                        <li><a href="{% url 'team_profile_meetings_list' team.id %}">{% trans 'جلسات' %}</a></li>
+                                        <li><a href="{% url 'team_profile_votes_list' team.id %}">{% trans 'نظرسنجی' %}</a></li>
+                                    </ul>
+                                </li>
+                                {% endfor %}
+                                <!-- ACCOUNT APP END -->
+                            </ul>
+                            {% endif %}
+                        </div>
                     </div>
                     <!-- /sidebar menu -->
                 </div>
