--- a/accounts/templates/gentellela/page_footer.html
+++ b/accounts/templates/gentellela/page_footer.html
@@ -1,4 +1,4 @@
-<h3> ایمن پردازان روبین پارس</h3>
+<h3>Robin Traders</h3>
 <!-- <p>Made with
     <svg class="heart" viewBox="0 0 32 29.6">
         <path d="M23.6,0c-3.4,0-6.3,2.7-7.6,5.6C14.7,2.7,11.8,0,8.4,0C3.8,0,0,3.8,0,8.4c0,9.4,9.5,11.9,16,21.2
@@ -6,4 +6,4 @@
     </svg>
     in <a href="https://iprpars.ir" style="color: lightcyan; font-size: 13px; text-decoration: underline;">IPRPars</a>
 </p> -->
-<p><a href="/contact-us/">درباره ما</a></p>
+<!-- <p><a href="/contact-us/">درباره ما</a></p> -->
